--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "01-todolist",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lazychal.github.io/mytodolist",
   "dependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
@@ -9,6 +10,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "axios": "^0.19.0",
+    "gh-pages": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
